--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
     "file-loader": "^1.1.5",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
-    "source-list-map": "^2.0.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "vue-router": "^3.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "vue": "^2.5.3",
-    "vue-router": "^3.0.1"
+    "swiper": "^3.4.2",
+    "vue": "^2.5.3"
   }
 }
