--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
+    "fetch-jsonp": "^1.1.3",
     "swiper": "^3.4.2",
     "vue": "^2.5.3"
   }
